# empire-data

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
doc/: header.xcf
src/edata/: sun.py
src/edata/_internal/: commons_frozen.py
src/edata/sun/: manic-2026.txt  manic-2027.txt  manic-2028.txt
src/edata/sun_data/: manic-2025.txt
sun/: manic-2023.txt  manic-2024.txt  source.txt
