[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "empire-data"
version = "1.0"
authors = [
    {name="Yann Tremblay", email="yanntremblay@tombmyst.ca"}
]
description = " Bunch of data"
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
dependencies = [
    "frozendict>=2.3.4",
    "empire_commons@https://github.com/Tombmyst-Empire/empire-commons/archive/refs/heads/master.zip"
]
[project.optional-dependencies]
tests = ["requirements_dev.txt"]

[project.urls]
"Homepage" = "https://github.com/Tombmyst-Empire/empire-data"
"Bug Tracker" = "https://github.com/Tombmyst-Empire/empire-data/issues"

[tool.pytest.ini_options]
minversion = "7.3.1"
python_files = "test_*.py"
testpaths = [
    "tests"
]
pythonpath = "."

[tool.black]
line-length = 150

[tool.pylint.master]
py-version = "3.10"
recursive = true
jobs = 0

[tool.pylint.'MESSAGE CONTROL']
confidence = "UNDEFINED"

[tool.pylint.reports]
output-format = "colorized"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sun_data = ["*.txt"]